login_form finished

--- a/loginform.html
+++ b/loginform.html
@@ -14,7 +14,7 @@
   <h2>Vertical (basic) form</h2>
   <form action="/login" method="post">
     <div class="form-group">
-      <label for="email">Email:</label>
+      <label for="email">EMmail:</label>
       <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
     </div>
     <div class="form-group">
